Trabajando en el apartado del algoritmo C4.5

--- a/Base.tex
+++ b/Base.tex
@@ -96,7 +96,13 @@
 	%
 	\chapter{Capitulo 2}\label{cap:Cap2}
 	\cfinput{capitulo2/marcoteorico}
-	%bigdata arquitectura software (competidores de hadoop) mapreduce machine learning algoritmos supervisados (knn ejemplo, arboles de decision )y no supervisados (ejemplos, kammins) apuntes de mineria de datos
+	%bigdata 
+	%arquitectura software 
+	%(competidores de hadoop) 
+	%mapreduce machine learning 
+	%algoritmos supervisados (knn ejemplo, arboles de decision )
+	%no supervisados (ejemplos, kammins) 
+	%apuntes de mineria de datos
 	%
 	\chapter{Capitulo 3}\label{cap:Cap3}
 	%Realizar Pagos
