Se agrega sección de c4.5

--- a/Base.tex
+++ b/Base.tex
@@ -6,6 +6,7 @@
 %\usepackage{sigra}
 %\usepackage{sinacem}
 \usepackage{cdt/cdtFormal}
+\usepackage[T1]{fontenc}
 %\usepackage{subfigure}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{2}
@@ -99,7 +100,8 @@
 	%bigdata 
 	%arquitectura software 
 	%(competidores de hadoop) 
-	%mapreduce machine learning 
+	%mapreduce 
+	%machine learning 
 	%algoritmos supervisados (knn ejemplo, arboles de decision )
 	%no supervisados (ejemplos, kammins) 
 	%apuntes de mineria de datos
